--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,17 @@
-:root {
-  /* colors */
+* {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 html, body {
@@ -15,6 +26,402 @@ html, body {
   flex-direction: column;
 }
 
+body {
+  font-family: 'Golos Text', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  color: var(--color-fg);
+  background: var(--white);
+}
+
+
 main {
   flex: 1;
 }
+
+/* Links */
+a, a:link, a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+aside, nav, footer, header, section, main {
+  display: block;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 0;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  padding: 0;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: inherit;
+  font-weight: normal;
+}
+
+ul, ul li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+img {
+  vertical-align: top;
+}
+
+img, svg {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.btn-reset {
+  padding: 0;
+  border: 0;
+  outline: 0;
+  background: transparent;
+}
+
+.color-grey-accent {
+  color: var(--grey-accent);
+}
+
+.color-yellow {
+  color: var(--yellow);
+}
+
+.color-dark-blue {
+  color: var(--dark-blue);
+}
+
+.color-white {
+  color: var(--white);
+}
+
+.color-grey-light {
+  color: var(--grey-light);
+}
+
+.color-error {
+  color: var(--error);
+}
+
+.color-black {
+  color: var(--black);
+}
+
+.bg-black {
+  background: var(--black);
+}
+
+.bg-yellow {
+  background: var(--yellow);
+}
+
+.bg-dark-blue {
+  background: var(--dark-blue);
+}
+
+.bg-white {
+  background: var(--white);
+}
+
+
+/* Text */
+/* Mobile */
+.hero {
+  font-size: 70px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 110%; /* 77px */
+}
+
+.headline-1 {
+  font-size: 52px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 98%;
+}
+
+.headline-2 {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.headline-3 {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.headline-4 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.headline-5 {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.subtitle-1 {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.subtitle-2 {
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.title-1 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 130%;
+}
+
+.title-2 {
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-transform: uppercase;
+}
+
+.title-3 {
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+}
+
+.text-1 {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.text-2 {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.text-3 {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.caption-1 {
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.fit-content-width {
+  width: fit-content;
+}
+
+.comment {
+  font-family: var(--font-secondary), sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 109%; /* 16.35px */
+}
+
+
+/* Tablet */
+
+@media screen and (min-width: 768px) {
+  .hero {
+    font-size: 70px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 110%;
+  }
+  .headline-1 {
+    font-size: 52px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 98%;
+  }
+
+  .headline-2 {
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+
+  .headline-3 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+
+  .headline-4 {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .headline-5 {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .subtitle-1 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .subtitle-2 {
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .text-3 {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .caption-1 {
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+}
+
+/* Desktop */
+@media screen and (min-width: 1200px){
+  .hero {
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .headline-1 {
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 98%;
+  }
+
+  .headline-2 {
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+
+  .headline-3 {
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+
+  .headline-4 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .headline-5 {
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+
+  .title-1 {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 130%;
+  }
+
+  .title-2 {
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+    text-transform: uppercase;
+  }
+
+  .title-3 {
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+  }
+
+  .text-1 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .text-2 {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+  }
+
+  .text-3 {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .caption-1 {
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+}
+
+
+/*Text end */
